--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/fondo"
     tools:context=".UI.MainActivity">
-
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="361dp"
@@ -20,12 +19,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="167dp"
             android:backgroundTint="@color/white">
-
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/userImagen"
                 android:layout_width="106dp"
@@ -37,7 +34,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
-
             <TextView
                 android:id="@+id/userNombre"
                 android:layout_width="wrap_content"
@@ -50,7 +46,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/userImagen" />
-
             <TextView
                 android:id="@+id/userEmail"
                 android:layout_width="wrap_content"
@@ -60,7 +55,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/userNombre" />
-
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -69,14 +63,12 @@
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
-
                 <TextView
                     android:id="@+id/textViewPin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableTint="#000"
                     android:paddingRight="5dp" />
-
                 <TextView
                     android:id="@+id/userId"
                     android:layout_width="wrap_content"
@@ -84,11 +76,10 @@
                     android:text="xxx"
                     android:textSize="8sp" />
             </LinearLayout>
-
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="0dp"
         android:layout_height="64dp"
         android:layout_marginStart="24dp"
@@ -98,12 +89,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView">
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="@color/white">
-
             <Button
                 android:id="@+id/btnLogout"
                 android:layout_width="wrap_content"
@@ -120,7 +109,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.421" />
-
             <Button
                 android:id="@+id/btnEliminarCta"
                 android:layout_width="wrap_content"
@@ -139,6 +127,43 @@
                 app:layout_constraintVertical_bias="0.421" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-
-
+    <Button
+        android:id="@+id/btnApps"
+        android:layout_width="266dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/design_default_color_error"
+        android:text="Apps Presupuesto"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+    <Button
+        android:id="@+id/btnPoliticas"
+        android:layout_width="262dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="72dp"
+        android:backgroundTint="@color/design_default_color_error"
+        android:text="Condiciones"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnApps" />
+    <Button
+        android:id="@+id/btnAcerca"
+        android:layout_width="261dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="12dp"
+        android:backgroundTint="@color/design_default_color_error"
+        android:text="Acerca de"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnApps" />
 </androidx.constraintlayout.widget.ConstraintLayout>
