--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,35 +5,37 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="@drawable/degradado"
     tools:context=".UI.MainActivity">
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="361dp"
+        android:layout_width="0dp"
         android:layout_height="168dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
-        app:cardBackgroundColor="#FFFFFF"
+        app:cardBackgroundColor="@color/blue_100"
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="167dp"
-            android:backgroundTint="@color/white">
+            android:layout_height="167dp">
+
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/userImagen"
                 android:layout_width="106dp"
                 android:layout_height="109dp"
                 android:layout_margin="16dp"
                 android:layout_marginTop="4dp"
-                android:background="@drawable/user1"
                 android:src="@drawable/user1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/userNombre"
                 android:layout_width="wrap_content"
@@ -46,15 +48,18 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/userImagen" />
+
             <TextView
                 android:id="@+id/userEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="email@domini.com"
                 android:textSize="10sp"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/userNombre" />
+
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -62,13 +67,16 @@
                 android:orientation="horizontal"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/userEmail">
+
                 <TextView
                     android:id="@+id/textViewPin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableTint="#000"
                     android:paddingRight="5dp" />
+
                 <TextView
                     android:id="@+id/userId"
                     android:layout_width="wrap_content"
@@ -78,6 +86,7 @@
             </LinearLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView2"
         android:layout_width="0dp"
@@ -89,81 +98,87 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:backgroundTint="@color/white">
+            android:background="@color/blue_100">
+
             <Button
                 android:id="@+id/btnLogout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/design_default_color_error"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:backgroundTint="@color/red_700"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 android:text="Cerrar Sesión"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/btnEliminarCta"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.421" />
+                app:layout_constraintTop_toTopOf="parent" />
+
             <Button
                 android:id="@+id/btnEliminarCta"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/design_default_color_error"
-                android:paddingStart="5dp"
-                android:paddingEnd="5dp"
+                android:minWidth="48dp"
+                android:minHeight="48dp"
+                android:backgroundTint="@color/red_700"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
                 android:text="Eliminar Cuenta"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/btnLogout"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.421" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
+
     <Button
         android:id="@+id/btnApps"
         android:layout_width="266dp"
-        android:layout_height="45dp"
+        android:layout_height="56dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@color/design_default_color_error"
+        android:backgroundTint="@color/green_400"
         android:text="Apps Presupuesto"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
     <Button
         android:id="@+id/btnPoliticas"
-        android:layout_width="262dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="72dp"
-        android:backgroundTint="@color/design_default_color_error"
+        android:layout_width="266dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/blue_800"
         android:text="Condiciones"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnApps" />
+
     <Button
         android:id="@+id/btnAcerca"
-        android:layout_width="261dp"
-        android:layout_height="45dp"
+        android:layout_width="266dp"
+        android:layout_height="56dp"
         android:layout_marginTop="12dp"
-        android:backgroundTint="@color/design_default_color_error"
+        android:backgroundTint="@color/yellow_800"
         android:text="Acerca de"
+        android:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnApps" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPoliticas" />
 </androidx.constraintlayout.widget.ConstraintLayout>
