--- a/app/src/main/res/layout/activity_detail_budget.xml
+++ b/app/src/main/res/layout/activity_detail_budget.xml
@@ -6,8 +6,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
+    android:background="@drawable/degradado3"
     tools:context=".UI.DetailBudget">
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -15,54 +16,63 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="60dp"
+        android:fontFamily="sans-serif-black"
         android:text="Mi compras"
         android:textColor="@color/white"
-        android:textSize="30sp"
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/imvFinalizar"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <ImageView
         android:id="@+id/imvFinalizar"
-        android:layout_width="60dp"
-        android:layout_height="61dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/listo" />
+        app:srcCompat="@drawable/check" />
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView">
+
         <TextView
             android:id="@+id/textView1"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingEnd="4dp"
             android:text="Artículo"
+            android:textAlignment="center"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/edtArticulo"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="1"
-            android:ems="10"
+            android:layout_weight="2"
             android:hint="Nombre del artículo"
             android:inputType="text"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
+            android:drawablePadding="10dp"
+            android:padding="16dp"
+            android:background="@drawable/rounded_edittext"
+            android:textColor="@color/gray_800"
+            android:textColorHint="@color/gray_500"
+            android:minHeight="48dp" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
@@ -71,29 +81,35 @@
         android:orientation="horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:layout_editor_absoluteX="-2dp">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingEnd="4dp"
             android:text="Precio"
+            android:textAlignment="center"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/edtPrecio"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="21dp"
-            android:layout_weight="1"
-            android:ems="10"
+            android:layout_weight="2"
             android:hint="Ingrese el precio"
             android:inputType="numberDecimal"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
+            android:drawablePadding="10dp"
+            android:padding="16dp"
+            android:background="@drawable/rounded_edittext"
+            android:textColor="@color/gray_800"
+            android:textColorHint="@color/gray_500"
+            android:minHeight="48dp" />
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
@@ -102,27 +118,33 @@
         android:orientation="horizontal"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        tools:layout_editor_absoluteX="-2dp">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:paddingEnd="4dp"
             android:text="Cantidad"
+            android:textAlignment="center"
             android:textColor="@color/white"
-            android:textColorHint="@color/white"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/edtCantidad"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:ems="10"
+            android:layout_weight="2"
             android:hint="Ingrese la cantidad"
             android:inputType="number"
-            android:textColor="@color/white"
-            android:textColorHint="@color/white" />
+            android:drawablePadding="10dp"
+            android:padding="16dp"
+            android:background="@drawable/rounded_edittext"
+            android:textColor="@color/gray_800"
+            android:textColorHint="@color/gray_500"
+            android:minHeight="48dp" />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearLayout4"
@@ -130,6 +152,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:orientation="horizontal"
+        android:background="@drawable/rounded_edittext"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
         tools:layout_editor_absoluteX="1dp">
         <LinearLayout
@@ -152,7 +175,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="$"
-                android:textColor="@color/black"
+                android:textColor="@color/red_900"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -176,38 +199,45 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="$"
-                android:textColor="@color/black"
+                android:textColor="@color/red_900"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
+
     <Button
         android:id="@+id/btnGuardarDia"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:backgroundTint="@android:color/transparent"
+        android:backgroundTint="@color/red_900"
+        android:fontFamily="sans-serif"
         android:outlineProvider="none"
         android:text="Guardar compra"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-        tools:layout_editor_absoluteX="176dp" />
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
+
     <View
         android:id="@+id/vSeparator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="15dp"
-        android:background="#676060"
+        android:background="@color/gray_400"
         app:layout_constraintTop_toBottomOf="@+id/btnGuardarDia" />
+
     <TextView
         android:id="@+id/textView9"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:fontFamily="sans-serif-black"
         android:gravity="center"
         android:text="Detalle compras realizadas"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/vSeparator" />
@@ -215,7 +245,8 @@
         android:id="@+id/rcvCompras"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="5dp"
+        android:paddingBottom="5dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView9"
