--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,23 +5,25 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="@drawable/fondo1"
     tools:context=".UI.loginActivity">
+
 
     <TextView
         android:id="@+id/logo"
-        android:layout_width="182dp"
-        android:layout_height="103dp"
-        android:drawableLeft="@drawable/usuariofondo"
+        android:layout_width="128dp"
+        android:layout_height="115dp"
+        android:drawableLeft="@drawable/users"
         android:textColor="@color/white"
         android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.454"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.081" />
+
 
     <EditText
         android:id="@+id/inputEmail"
@@ -32,19 +34,13 @@
         android:layout_marginEnd="32dp"
         android:drawableLeft="@drawable/baseline_forward_to_inbox_24"
         android:drawablePadding="10dp"
-        android:ems="10"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/white"
-        android:textColorLink="@color/white"
+        android:padding="16dp"
+        android:background="@drawable/rounded_edittext"
+        android:textColor="@color/gray_800"
+        android:textColorHint="@color/gray_500"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
@@ -55,23 +51,27 @@
         android:layout_marginTop="12dp"
         android:drawableLeft="@drawable/baseline_security_24"
         android:drawablePadding="10dp"
-        android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:paddingLeft="20dp"
-        android:paddingTop="10dp"
-        android:paddingRight="10dp"
-
-        android:paddingBottom="10dp"
-        android:textColor="@color/white"
-        android:textColorHighlight="@color/white"
-        android:textColorHint="@color/white"
-        android:textColorLink="@color/white"
+        android:padding="16dp"
+        android:background="@drawable/rounded_edittext"
+        android:textColor="@color/gray_800"
+        android:textColorHint="@color/gray_500"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/inputEmail"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/inputEmail"
         app:layout_constraintTop_toBottomOf="@+id/inputEmail" />
+
+    <ImageView
+        android:id="@+id/tPassVisibility"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginEnd="52dp"
+        android:src="@drawable/close"
+        app:layout_constraintBottom_toBottomOf="@+id/inputPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/inputPassword"
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/forgotPassword"
@@ -91,10 +91,10 @@
         android:layout_width="249dp"
         android:layout_height="52dp"
         android:layout_marginTop="16dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/blue_600"
         android:drawableLeft="@drawable/baseline_send_24"
-        android:text="Login"
-        android:textColor="@color/black"
+        android:text="Iniciar Sesion"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/inputPassword"
@@ -123,14 +123,14 @@
         android:layout_width="253dp"
         android:layout_height="52dp"
         android:layout_marginStart="80dp"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/red_600"
         android:drawableLeft="@drawable/gmail"
         android:drawablePadding="5dp"
         android:paddingLeft="20dp"
         android:text="         Google"
         android:textAlignment="textStart"
         android:textAllCaps="false"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="20sp"
 
         android:textStyle="bold"
@@ -155,14 +155,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="No tiene una cuenta?"
-            android:textColor="@color/white" />
+            android:textColor="@color/white"
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/txtRegistrese"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" Regístrese"
-            android:textColor="@color/white"
+            android:textColor="@color/yellow_400"
+            android:textSize="18sp"
             android:textStyle="bold" />
     </LinearLayout>
 
