--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,8 +6,9 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/system_accent2_10"
+        android:background="@drawable/degradado2"
         tools:context=".UI.MainActivity2">
+
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
@@ -15,18 +16,21 @@
             android:layout_marginStart="30dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="20dp"
+            android:fontFamily="sans-serif-black"
             android:text="Mis presupuestos"
-            android:textSize="30sp"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toStartOf="@+id/imgAgregar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <ImageView
             android:id="@+id/imgAgregar"
-            android:layout_width="77dp"
-            android:layout_height="66dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="28dp"
-            android:src="@drawable/agregar"
+            android:src="@drawable/add"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
         <androidx.recyclerview.widget.RecyclerView
