--- a/app/src/main/res/layout/activity_politicas_de.xml
+++ b/app/src/main/res/layout/activity_politicas_de.xml
@@ -4,7 +4,25 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/degradado"
     tools:context=".UI.PoliticasDeActivity">
+
+    <TextView
+        android:id="@+id/textViewPoliticas"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:fontFamily="sans-serif-black"
+        android:text="POLITICAS"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        android:padding="8dp"
+        android:background="@color/blue_900"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <TextView
         android:id="@+id/txtPoliticas"
         android:layout_width="0dp"
@@ -12,9 +30,10 @@
         android:padding="16dp"
         android:scrollbars="vertical"
         android:textSize="16sp"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@android:color/white"
+        app:layout_constraintTop_toBottomOf="@id/textViewPoliticas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
