--- a/app/src/main/res/layout/detail_item_layout.xml
+++ b/app/src/main/res/layout/detail_item_layout.xml
@@ -1,29 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/rounded_edittext"
+    android:backgroundTint="#216EF3"
     android:orientation="vertical"
     android:padding="10sp">
+
     <TextView
         android:id="@+id/txvNombreGasto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Sin asignar" />
+        android:fontFamily="sans-serif-black"
+        android:text="Sin asignar"
+        android:textColor="@color/white" />
+
     <TextView
         android:id="@+id/txvPrecioGasto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Sin asignar" />
+        android:fontFamily="sans-serif-black"
+        android:text="Sin asignar"
+        android:textColor="@color/white" />
+
     <TextView
         android:id="@+id/txvCantidadGasto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_weight="1"
-        android:text="Sin asignar" />
+        android:fontFamily="sans-serif-black"
+        android:text="Sin asignar"
+        android:textColor="@color/white" />
+
     <TextView
         android:id="@+id/txvSubtotalGasto"
         android:layout_width="match_parent"
@@ -31,12 +44,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:layout_weight="1"
-        android:text="Sin asignar" />
-    <View
-        android:id="@+id/vSeparator"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="5dp"
-        android:background="#676060"
-        app:layout_constraintTop_toBottomOf="@+id/txvSubtotalGasto" />
+        android:fontFamily="sans-serif-black"
+        android:text="Sin asignar"
+        android:textColor="@color/white" />
+
 </LinearLayout>
