--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -5,12 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/txvItemRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-light"
         android:padding="20sp"
         android:text="TextView"
+        android:textColor="@color/white"
         android:textSize="15sp"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="146dp" />
